Fixing old tables formats
